<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/red"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText1"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/gris"
            android:textColorHint="@color/black"
            android:hint="@string/edit_text1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText2"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/gris"
                android:textColorHint="@color/black"
                android:hint="@string/edit_text2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="0" />

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_compare" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textViewResultado"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="8dp"
                android:background="@color/gris"
                android:text="@string/text_view"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>